[package]
name = "cuda-contract"
version = "0.1.0"
edition = "2021"
description = "SLA management with compliance tracking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-contract"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

